k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: meal-platform
  labels:
    app: meal-recipe-platform
    environment: production
